# Codex-Manager

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/: README.md  (+3 more)
crates/rusqlite/: Cargo.toml
crates/rusqlite/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: account_identity.rs  aggregate_api.rs  aggregate_api_tests.rs  codex_profile.rs  codex_profile_tests.rs  dashboard.rs  dashboard_tests.rs  lib.rs  model_groups.rs  startup_snapshot.rs  startup_snapshot_tests.rs  time_bounds.rs
crates/service/src/account/: account_cleanup.rs  account_cleanup_tests.rs  account_delete.rs  account_delete_many.rs  account_delete_many_tests.rs  account_export.rs  account_export_tests.rs  account_import.rs  account_list.rs  account_plan.rs  account_plan_tests.rs  account_proxy.rs  account_proxy_health.rs  account_status.rs  account_status_tests.rs  account_update.rs  account_update_tests.rs  account_warmup.rs  account_warmup_tests.rs  mod.rs
crates/service/src/apikey/: apikey_create.rs  apikey_list.rs  apikey_models.rs  apikey_models_tests.rs  apikey_profile.rs  apikey_profile_tests.rs  apikey_update_model.rs  apikey_usage_history.rs  apikey_usage_stats.rs  mod.rs
crates/service/src/app_settings/: codex_latest_sync.rs  codex_latest_sync_tests.rs  gateway.rs  gateway_tests.rs  mod.rs  runtime_sync.rs  shared.rs  ui.rs  ui_tests.rs
crates/service/src/auth/: app_manager.rs  auth_account.rs  auth_tokens.rs  mod.rs
crates/service/src/errors/: mod.rs  mod_tests.rs
crates/service/src/gateway/: README.md  concurrency.rs  concurrency_tests.rs  error_response.rs  mod.rs
crates/service/src/http/: proxy_runtime.rs  responses_websocket.rs  responses_websocket_tests.rs  rpc_endpoint.rs  rpc_endpoint_tests.rs  usage_events.rs  usage_events_tests.rs
crates/service/src/lifecycle/: startup.rs
crates/service/src/models_v2/: import.rs  instructions.rs  mod.rs
crates/service/src/plugin/: catalog.rs  catalog_tests.rs  mod.rs  runtime.rs  runtime_tests.rs  scheduler.rs  store.rs  store_tests.rs
crates/service/src/proxy_registry/: mod.rs  validation.rs
crates/service/src/quota/: api_key_usage.rs  mod.rs  model_pricing.rs  model_pricing_tests.rs  read.rs  read_tests.rs
crates/service/src/requestlog/: requestlog_list.rs  (+5 more)
crates/service/tests/: app_settings.rs  default_addr.rs  rpc.rs  support.rs
crates/web/: Cargo.toml
crates/web/src/: auth.rs  auth_tests.rs  gateway_websocket.rs  gateway_websocket_tests.rs  main.rs  main_tests.rs  service_gateway.rs  service_gateway_tests.rs  ui_assets.rs  ui_assets_tests.rs
(+524 files in other folders)
