[package]
name = "rusqlite"
version = "0.31.0"
edition = "2021"

[features]
default = []
bundled = []
backup = []

[dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
